--- a/test-output/report/reportSelenium.html
+++ b/test-output/report/reportSelenium.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">oct 16, 2023 09:21:12 PM</span></a>
+<a href="#"><span class="badge badge-primary">oct 19, 2023 09:10:40 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,7 +79,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@caso-1</a><a class="dropdown-item" href="#">@practica</a>
+<a class="dropdown-item" href="#">@caso-3</a><a class="dropdown-item" href="#">@practica</a>
 </ul>
 </li>
 </ul>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Ejercicios de la practica</p>
             <p class="text-sm">
-              <span>09:21:13 PM</span> / <span>00:00:03:896</span>
+              <span>09:10:40 PM</span> / <span>00:00:11:255</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Ejercicios de la practica</h5>
-<span class='badge badge-success'>10.16.2023 09:21:13 PM</span>
-<span class='badge badge-danger'>10.16.2023 09:21:17 PM</span>
-<span class='badge badge-default'>00:00:03:896</span>
+<span class='badge badge-success'>10.19.2023 09:10:40 PM</span>
+<span class='badge badge-danger'>10.19.2023 09:10:52 PM</span>
+<span class='badge badge-default'>00:00:11:255</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -115,7 +115,7 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Login exitoso</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Remover un producto del carrito</div>
       </div>
     </div>
         <div class="collapse">
@@ -127,7 +127,7 @@
               </div>
               <div class="step pass-bg" title="glue.StepDefinitionPractica.ingreso_mis_credenciales(io.cucumber.datatable.DataTable)">
                 <span>When ingreso mis credenciales</span>
-      <div><table class='markup-table table '><tr><td>user</td><td>password</td></tr><tr><td>standard_user</td><td>secret_sauce</td></tr></table>
+      <div><table class='markup-table table '><tr><td>user</td><td>password</td></tr><tr><td>problem_user</td><td>secret_sauce</td></tr></table>
       </div>
       <div>
       </div>
@@ -137,8 +137,18 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="glue.StepDefinitionPractica.valido_lista_productos()">
-                <span>Then valido me carguen los productos</span>
+              <div class="step pass-bg" title="glue.StepDefinitionPractica.agrego_un_producto_al_carrito(java.lang.String)">
+                <span>And agrego un producto al carrito "Sauce Labs Onesie"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="glue.StepDefinitionPractica.elimino_producto_carrito()">
+                <span>And elimino el producto del carrito</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="glue.StepDefinitionPractica.valido_carrito_vacio()">
+                <span>Then valido que el carrito este vacio</span>
       <div>
       </div>
               </div>
@@ -170,12 +180,12 @@
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@caso-1</p>
+<p class="name">@caso-3</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@caso-1</h4>
+<h4>@caso-3</h4>
 <span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -189,11 +199,11 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:21:13 PM</td>
+<td>21:10:40 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Login exitoso</a>
+<a href="#" class="linked" test-id='1' id='2'>Remover un producto del carrito</a>
 <div class="">
-<span class="badge badge-default">Ejercicios de la practica.Login exitoso</span>
+<span class="badge badge-default">Ejercicios de la practica.Remover un producto del carrito</span>
 </div>
 </td>
 </tr>
@@ -225,11 +235,11 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:21:13 PM</td>
+<td>21:10:40 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Login exitoso</a>
+<a href="#" class="linked" test-id='1' id='2'>Remover un producto del carrito</a>
 <div class="">
-<span class="badge badge-default">Ejercicios de la practica.Login exitoso</span>
+<span class="badge badge-default">Ejercicios de la practica.Remover un producto del carrito</span>
 </div>
 </td>
 </tr>
@@ -250,13 +260,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>oct 16, 2023 09:21:12 PM</h3>
+<h3>oct 19, 2023 09:10:40 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>oct 16, 2023 09:21:17 PM</h3>
+<h3>oct 19, 2023 09:10:52 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -327,7 +337,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>4</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>6</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -346,7 +356,7 @@
 </div></div>
 <script>
 var timeline = {
-"Ejercicios de la practica":3.896
+"Ejercicios de la practica":11.255
 };
 </script>
 <div class="row">
@@ -356,7 +366,7 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@caso-1</td>
+<td>@caso-3</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -391,7 +401,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 4,
+passGrandChild: 6,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
